<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kahve_bg"
    tools:context=".ui.kahvefali.Fincan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/photo_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#7C9E8E82"
                        android:text="@string/foto_cek"
                        android:textColor="#45342F"
                        android:textSize="46sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/photo_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="4"
                        android:background="#7C9E8E82"
                        android:gravity="center"
                        android:text="@string/foto_yok"
                        android:textAlignment="center"
                        android:textColor="#45342F"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/fincan_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorUnpressed"
                    app:srcCompat="@drawable/cofee_cup_h" />

                <ImageView
                    android:id="@+id/fincan_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorUnpressed"
                    app:srcCompat="@drawable/cofee_cup_h" />

                <ImageView
                    android:id="@+id/fincan_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorUnpressed"
                    app:srcCompat="@drawable/cofee_cup_h" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:background="#7C9E8E82"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/sonuc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/temizle"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/ic_cancel"
                            android:backgroundTint="#8A3D3D" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tem_zle"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/gonder"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/ic_send"
                            android:backgroundTint="#8A3D3D" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/g_nder"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fotocek"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/foto_al"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/ic_add_a_photo"
                            android:backgroundTint="#8A3D3D" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fincan_resmi_ekle"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="24sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>