<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kahve_bg"
    tools:context=".ui.kahvefali.Waiting" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coffee_setup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#7C9E8E82"
                    android:text="@string/fal_yorumlaniyor"
                    android:textColor="#45342F"
                    android:textSize="46sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/timer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/after_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="#E0C8B19F"
                        android:gravity="center"
                        android:text="@string/kalan_s_re"
                        android:textAlignment="gravity"
                        android:textColor="#45342F"
                        android:textSize="36sp" />

                    <ProgressBar
                        android:id="@+id/after_progress"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#E1835B49"
                        android:indeterminateOnly="false"
                        android:max="300"
                        android:progress="0"
                        android:progressTint="#E6DCD6" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/look"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#7C9E8E82"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/goster"
                        android:layout_width="210dp"
                        android:layout_height="190dp"
                        android:background="@drawable/cofee_cup_h"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/adView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        ads:adSize="BANNER"
                        ads:adUnitId="@string/ad_banner_id" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>